
  * Release Date: TBD

  * Resolved Issues

    - Fixed an issue where SCIM filter processing may not handle date literals
      properly when converting to an LDAP filter. This may have produced
      incorrect search results with date-based filtering.

    - Fixed an issue where SCIM requests made using the Simple Paged Results
      control did not return a correct totalResults value.

---------- SCIM 1.8.1 ----------

  * Release Date: January 23rd, 2014

  * Resolved Issues

    - Fixed issue where using PATCH to delete values of a multi-valued attribute
      defined with an attribute mapping transformation may not always work. LDAP
      server must now support Permissive Modify Request Control in order to
      conform to SCIM spec when adding existing values or deleting non-existent
      values.

    - Fixed issue where TelephoneNumberTransformation does not preserve the
      original number format. It is now guaranteed to not add, modify, or
      remove any digits during transformation. The defaultCountry and ldapFormat
      arguments are no longer applicable to the transformation and will be
      ignored if specified.

    - Fixed issue where replacing all values of an attribute with a PATCH
      operation by specifying the attribute in meta.attributes and the new
      values results in two LDAP modify operations with add and delete change
      types.

    - Updated to Jetty 8.1.16.v20140903 for the reference SCIM server.

---------- SCIM 1.8.0 ----------

  * Release Date: September 11th, 2014

  * This release introduces several new ease-of-use enhancements, particularly
    for retrieving and setting attributes of resources described by custom
    schemas (schemas other than the standard SCIM User and Group).

  * New Features

    - Added a new getEndpoint overload to the SCIMService class that bypasses
      the need to obtain a ResourceDescriptor from the schema endpoint.
